--- a/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/MessageBoard/Views/Shared/_Layout.cshtml
@@ -11,30 +11,30 @@
 
     <!-- HTML5 Support for IE -->
     <!--[if lt IE 9]>
-  <script src="js/html5shim.js"></script>
+  <script src="~/scripts/html5shim.js"></script>
   <![endif]-->
 
     <!-- Google Web Font -->
     <link href='http://fonts.googleapis.com/css?family=Dosis:200,400,600' rel='stylesheet' type='text/css'>
 
     <!-- Stylesheets -->
-    <link href="style/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="style/font-awesome.css">
+    <link href="~/Content/Template/style/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="~/Content/Template/style/font-awesome.css">
     <!--[if IE 7]>
-  <link rel="stylesheet" href="style/font-awesome-ie7.css">
+  <link rel="stylesheet" href="~/Content/Template/style/font-awesome-ie7.css">
   <![endif]-->
 
-    <link href="style/ddlevelsmenu-base.css" rel="stylesheet">
-    <link href="style/ddlevelsmenu-topbar.css" rel="stylesheet">
-    <link href="style/style.css" rel="stylesheet">
+    <link href="~/Content/Template/style/ddlevelsmenu-base.css" rel="stylesheet">
+    <link href="~/Content/Template/style/ddlevelsmenu-topbar.css" rel="stylesheet">
+    <link href="~/Content/Template/style/style.css" rel="stylesheet">
     <!-- Change the template color below. Supported colors blue,red and green. -->
-    <link href="style/blue.css" rel="stylesheet">
-    <link href="style/bootstrap-responsive.css" rel="stylesheet">
-    <link href="style/flexslider.css" rel="stylesheet">
-    <link href="style/prettyPhoto.css" rel="stylesheet">
+    <link href="~/Content/Template/style/blue.css" rel="stylesheet">
+    <link href="~/Content/Template/style/bootstrap-responsive.css" rel="stylesheet">
+    <link href="~/Content/Template/style/flexslider.css" rel="stylesheet">
+    <link href="~/Content/Template/style/prettyPhoto.css" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon/favicon.png">
+    <link rel="shortcut icon" href="~/Content/Template/img/favicon/favicon.png">
 </head>
 
 <body>
@@ -55,15 +55,15 @@
                         <div class="social">
                             <!-- Social media icons. Repalce # with your profile links -->
                             <a href="#">
-                                <img src="img/facebook.png" alt="" width="40" /></a>
+                                <img src="~/Content/Template/img/facebook.png" alt="" width="40" /></a>
                             <a href="#">
-                                <img src="img/twitter.png" alt="" width="40" /></a>
+                                <img src="~/Content/Template/img/twitter.png" alt="" width="40" /></a>
                             <a href="#">
-                                <img src="img/linkedin.png" alt="" width="40" /></a>
+                                <img src="~/Content/Template/img/linkedin.png" alt="" width="40" /></a>
                             <a href="#">
-                                <img src="img/googleplus.png" alt="" width="40" /></a>
+                                <img src="~/Content/Template/img/googleplus.png" alt="" width="40" /></a>
                             <a href="#">
-                                <img src="img/rss.png" alt="" width="40" /></a>
+                                <img src="~/Content/Template/img/rss.png" alt="" width="40" /></a>
                         </div>
                     </div>
                 </div>
@@ -220,14 +220,13 @@
     </footer>
 
     <!-- Template JS -->
-    <script src="js/jquery.js"></script>
-    <script src="js/easing.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="js/ddlevelsmenu.js"></script>
-    <script type="text/javascript" src="js/flexslider.js"></script>
-    <script type="text/javascript" src="js/isotype.js"></script>
-    <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
-    <script type="text/javascript" src="js/custom.js"></script>
+    <script src="~/scripts/jquery-2.1.1.min.js"></script>
+    <script src="~/scripts/easing.js"></script>
+    <script src="~/scripts/bootstrap.js"></script>
+    <script type="text/javascript" src="~/scripts/ddlevelsmenu.js"></script>
+    <script type="text/javascript" src="~/scripts/flexslider.js"></script>
+    <script type="text/javascript" src="~/scripts/jquery.prettyPhoto.js"></script>
+    <script type="text/javascript" src="~/scripts/custom.js"></script>
     <!-- END Template JS -->
     <!-- RenderSection:  scripts -->
     @RenderSection("scripts", required: false)
