Finished through [Building The Data Model].[Using The Repository]

--- a/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/MessageBoard/Views/Shared/_Layout.cshtml
@@ -32,6 +32,10 @@
     <link href="~/Content/Template/style/bootstrap-responsive.css" rel="stylesheet">
     <link href="~/Content/Template/style/flexslider.css" rel="stylesheet">
     <link href="~/Content/Template/style/prettyPhoto.css" rel="stylesheet">
+    
+    <!-- Our custome styles -->
+    <link href="~/Content/Site.css" rel="stylesheet" />
+    <!-- END Our custome styles -->
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="~/Content/Template/img/favicon/favicon.png">
@@ -81,7 +85,7 @@
                     <div class="logo">
                         <div class="pull-left">
                             <!-- Logo with font awesome icon (icon-camera-retro). Replace it with your logo. Replace # with your site link -->
-                            <h1><a href="#"><i class="icon-camera-retro"></i>Outlooker</a></h1>
+                            <h1><a href="/"><i class="icon-camera-retro"></i>Outlooker</a></h1>
                         </div>
                         <div class="navi">
                             <!-- Navigation Starts Here -->
