--- a/MessageBoard/Content/Site.less
+++ b/MessageBoard/Content/Site.less
@@ -1,2 +1,37 @@
 ﻿/* Use this css file to override presets */
+@baseMessageColor: #aaa;
 
+.message
+{
+    background: none repeat scroll 0 0 lighten(@baseMessageColor, 25%);
+    border: 1px solid @baseMessageColor;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    margin-left: 0;
+    margin-right: -30px;
+    padding: 5px;
+
+    .title
+    {
+        font-size: 20px;
+        font-weight: bold;
+        text-shadow: 2px 2px 4px @baseMessageColor;
+    }
+
+    .reply
+    {
+        border-top: 1px solid @baseMessageColor;
+        margin-left: 15px;
+        margin-top: 5px;
+
+
+        .created
+        {
+            font-size: 9px;
+            margin-left: 10px;
+            text-shadow: 2px 2px 3px @baseMessageColor;
+        }
+    }
+}
