--- a/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/MessageBoard/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" data-ng-app="myapp">
+<html lang="en" data-ng-app="@ViewBag.InitModule">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -196,6 +196,7 @@
     <!-- Template JS -->
     <script src="~/scripts/jquery-2.1.1.min.js"></script>
     <script src="~/Scripts/angular.min.js"></script>
+    <script src="~/Scripts/angular-route.min.js"></script>
     <script src="~/scripts/easing.js"></script>
     <script src="~/scripts/bootstrap.js"></script>
     <script type="text/javascript" src="~/scripts/ddlevelsmenu.js"></script>
