--- a/MessageBoard/templates/topicsView.html
+++ b/MessageBoard/templates/topicsView.html
@@ -4,7 +4,9 @@
         <p class="lead">Latest Messages...</p>
         <div>Message Count: {{ data.length }}</div>
     </div>
-    
+    <div>
+        <a href="#/newmessage">Add New Message</a>
+    </div>
     <div class="progress progress-striped active" data-ng-show="isBusy">
         <div class="bar" style="width:100%;"></div>
     </div>
