--- a/MessageBoard/templates/topicsView.html
+++ b/MessageBoard/templates/topicsView.html
@@ -2,7 +2,7 @@
     <div class="message-header">
         <h1>Message Board</h1>
         <p class="lead">Latest Messages...</p>
-        <div>Message Count: {{ data.length }}</div>
+        <div>Message Count: {{ data.topics.length }}</div>
     </div>
     <div>
         <a href="#/newmessage">Add New Message</a>
@@ -12,7 +12,7 @@
     </div>
 
     <div class="messages">
-        <div class="message row" data-ng-repeat="item in data">
+        <div class="message row" data-ng-repeat="item in data.topics">
             <div class="title span10">
                 {{ item.title }}
             </div>
